[package]
name = "rodent-redis"
version = "0.1.0"
authors = ["zhouyelin <846859473@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
async-std = { version = "1.6.0", features = ["attributes"] }
anyhow = "1.0"
atoi = "0.3.2"

[[bin]]
name = "rodent-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "rodent-redis-server"
path = "src/bin/server.rs"